update thu 6