@@ -2,167 +2,170 @@ package Sevice;
 
 import java.util.*;
 import java.text.SimpleDateFormat;
+import java.util.stream.Collectors;
 
+import model.ChuyenBay;
+import model.HoaDon;
+import model.KhachHang;
+import model.VeMayBay;
 import repository.IFileHandler;
 import repository.IQuanLy;
-import model.HoaDon;
-import model.VeMayBay;
+import repository.IThongKe;
 import repository.XMLUtils;
 
-public class DanhSachHoaDon implements IQuanLy<HoaDon>, IFileHandler {
-    private ArrayList<HoaDon> danhSach;
+public class DanhSachHoaDon implements IQuanLy<HoaDon>, IFileHandler, IThongKe {
     
+
+    private List<HoaDon> danhSach;
+    private static final int MAX_SIZE = 5000;
+
     public DanhSachHoaDon() {
         this.danhSach = new ArrayList<>();
     }
-    
+
+    // ========== GETTERS ==========
+    public List<HoaDon> getDanhSach() {
+        return new ArrayList<>(danhSach);
+    }
+
+    public List<HoaDon> getDanhSachHoaDon() {
+        return new ArrayList<>(danhSach);
+    }
+
     // ========== IMPLEMENT IQUANLY ==========
     @Override
     public boolean them(HoaDon hoaDon) {
-        if (tonTai(hoaDon.getMaHoaDon())) {
-            System.out.println("Mã hóa đơn đã tồn tại!");
-            return false;
+        if (danhSach.size() >= MAX_SIZE) {
+            throw new IllegalStateException("Danh sách hóa đơn đã đầy!");
         }
-        danhSach.add(hoaDon);
-        System.out.println("Thêm hóa đơn thành công!");
-        return true;
+
+        if (tonTai(hoaDon.getMaHoaDon())) {
+            throw new IllegalArgumentException("Mã hóa đơn đã tồn tại: " + hoaDon.getMaHoaDon());
+        }
+
+        return danhSach.add(hoaDon);
     }
-    
+
     @Override
     public boolean xoa(String maHoaDon) {
-        for (Iterator<HoaDon> iterator = danhSach.iterator(); iterator.hasNext();) {
-            HoaDon hd = iterator.next();
-            if (hd.getMaHoaDon().equals(maHoaDon)) {
-                if (hd.getTrangThai().equals(HoaDon.TT_DA_TT)) {
-                    System.out.println("Không thể xóa hóa đơn đã thanh toán!");
-                    return false;
-                }
-                iterator.remove();
-                System.out.println("Xóa hóa đơn thành công!");
-                return true;
-            }
+        HoaDon hoaDon = timKiemTheoMa(maHoaDon);
+        if (hoaDon == null) {
+            throw new IllegalArgumentException("Không tìm thấy hóa đơn với mã: " + maHoaDon);
         }
-        System.out.println("Không tìm thấy hóa đơn với mã: " + maHoaDon);
-        return false;
+
+        // Kiểm tra nếu hóa đơn đã thanh toán thì không thể xóa
+        if (hoaDon.getTrangThai().equals(HoaDon.TT_DA_TT)) {
+            throw new IllegalStateException("Không thể xóa hóa đơn đã thanh toán!");
+        }
+
+        return danhSach.remove(hoaDon);
     }
-    
+
     @Override
     public boolean sua(String maHoaDon, HoaDon hoaDonMoi) {
-        for (int i = 0; i < danhSach.size(); i++) {
-            if (danhSach.get(i).getMaHoaDon().equals(maHoaDon)) {
-                if (danhSach.get(i).getTrangThai().equals(HoaDon.TT_DA_TT)) {
-                    System.out.println("Không thể sửa hóa đơn đã thanh toán!");
-                    return false;
-                }
-                danhSach.set(i, hoaDonMoi);
-                System.out.println("Cập nhật hóa đơn thành công!");
-                return true;
-            }
+        HoaDon hoaDonCu = timKiemTheoMa(maHoaDon);
+        if (hoaDonCu == null) {
+            throw new IllegalArgumentException("Không tìm thấy hóa đơn với mã: " + maHoaDon);
         }
-        System.out.println("Không tìm thấy hóa đơn với mã: " + maHoaDon);
-        return false;
+
+        // Kiểm tra nếu hóa đơn đã thanh toán thì không thể sửa
+        if (hoaDonCu.getTrangThai().equals(HoaDon.TT_DA_TT)) {
+            throw new IllegalStateException("Không thể sửa hóa đơn đã thanh toán!");
+        }
+
+        int index = danhSach.indexOf(hoaDonCu);
+        danhSach.set(index, hoaDonMoi);
+        return true;
     }
-    
+
     @Override
     public HoaDon timKiemTheoMa(String maHoaDon) {
         return danhSach.stream()
-                      .filter(hd -> hd.getMaHoaDon().equals(maHoaDon))
-                      .findFirst()
-                      .orElse(null);
+                .filter(hd -> hd.getMaHoaDon().equals(maHoaDon))
+                .findFirst()
+                .orElse(null);
     }
-    
+
     @Override
     public List<HoaDon> timKiemTheoTen(String ten) {
-        // Không áp dụng cho hóa đơn
-        return new ArrayList<>();
+        // Tìm theo tên khách hàng
+        String keyword = ten.toLowerCase();
+        return danhSach.stream()
+                .filter(hd -> hd.getKhachHang().getHoTen().toLowerCase().contains(keyword))
+                .collect(Collectors.toList());
     }
-    
+
     @Override
     public HoaDon timKiemTheoCMND(String cmnd) {
-        // Không áp dụng trực tiếp
-        return danhSach.get(0);
+        return danhSach.stream()
+                .filter(hd -> hd.getKhachHang().getCmnd().equals(cmnd))
+                .findFirst()
+                .orElse(null);
     }
-    
+
     @Override
     public List<HoaDon> timKiemTheoChuyenBay(String maChuyen) {
-        // Không áp dụng trực tiếp
-        return new ArrayList<>();
+        return danhSach.stream()
+                .filter(hd -> hd.getDanhSachVe().stream()
+                        .anyMatch(ve -> ve.getMaChuyen().equals(maChuyen)))
+                .collect(Collectors.toList());
     }
-    
+
     @Override
     public List<HoaDon> timKiemTheoKhoangGia(double min, double max) {
         return danhSach.stream()
-                      .filter(hd -> hd.getThanhTien() >= min && hd.getThanhTien() <= max)
-                      .toList();
+                .filter(hd -> hd.getThanhTien() >= min && hd.getThanhTien() <= max)
+                .collect(Collectors.toList());
     }
-    
+
     @Override
     public List<HoaDon> timKiemTheoNgayBay(Date ngay) {
-        // Không áp dụng
-        return new ArrayList<>();
-    }
-    
-    // PHƯƠNG THỨC MỚI: Tìm kiếm theo mã vé
-    public HoaDon timKiemTheoMaVe(String maVe) {
-        return danhSach.stream()
-                      .filter(hd -> hd.getMaVe().equals(maVe))
-                      .findFirst()
-                      .orElse(null);
-    }
-    
-    // PHƯƠNG THỨC MỚI: Tìm kiếm theo khách hàng
-    public List<HoaDon> timKiemTheoKhachHang(String maKH) {
-        return danhSach.stream()
-                      .filter(hd -> hd.getMaKH().equals(maKH))
-                      .toList();
-    }
-    
-    // PHƯƠNG THỨC MỚI: Tìm kiếm theo nhân viên
-    public List<HoaDon> timKiemTheoNhanVien(String maNV) {
-        return danhSach.stream()
-                      .filter(hd -> hd.getMaNV().equals(maNV))
-                      .toList();
-    }
-    
-    // PHƯƠNG THỨC MỚI: Tìm kiếm theo ngày lập
-    public List<HoaDon> timKiemTheoNgayLap(Date ngay) {
-        List<HoaDon> ketQua = new ArrayList<>();
         SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
         String ngayCanTim = sdf.format(ngay);
-        
-        for (HoaDon hd : danhSach) {
-            String ngayHD = sdf.format(hd.getNgayLap());
-            if (ngayHD.equals(ngayCanTim)) {
-                ketQua.add(hd);
-            }
-        }
-        return ketQua;
-    }
-    
-    // PHƯƠNG THỨC MỚI: Tìm kiếm theo trạng thái
-    public List<HoaDon> timKiemTheoTrangThai(String trangThai) {
+
         return danhSach.stream()
-                      .filter(hd -> hd.getTrangThai().equals(trangThai))
-                      .toList();
+                .filter(hd -> hd.getDanhSachVe().stream()
+                        .anyMatch(ve -> sdf.format(ve.getNgayBay()).equals(ngayCanTim)))
+                .collect(Collectors.toList());
     }
-    
-    // TÌM KIẾM ĐA TIÊU CHÍ
-    public List<HoaDon> timKiemHoaDon(Map<String, Object> filters) {
+
+    // ========== PHƯƠNG THỨC TÌM KIẾM NÂNG CAO CHO GUI ==========
+    public List<HoaDon> timKiemGanDung(String keyword) {
+        if (keyword == null || keyword.trim().isEmpty()) {
+            return new ArrayList<>(danhSach);
+        }
+
+        String keywordLower = keyword.toLowerCase().trim();
+        return danhSach.stream()
+                .filter(hd -> hd.getMaHoaDon().toLowerCase().contains(keywordLower) ||
+                        hd.getKhachHang().getHoTen().toLowerCase().contains(keywordLower) ||
+                        hd.getKhachHang().getCmnd().contains(keyword) ||
+                        hd.getKhachHang().getEmail().toLowerCase().contains(keywordLower) ||
+                        hd.getPhuongThucTT().toLowerCase().contains(keywordLower) ||
+                        hd.getTrangThai().toLowerCase().contains(keywordLower))
+                .collect(Collectors.toList());
+    }
+
+    public List<HoaDon> timKiemDaTieuChi(Map<String, Object> filters) {
         List<HoaDon> ketQua = new ArrayList<>(danhSach);
-        
+
         for (Map.Entry<String, Object> entry : filters.entrySet()) {
             String key = entry.getKey();
             Object value = entry.getValue();
-            
+
+            if (value == null || value.toString().isEmpty()) {
+                continue;
+            }
+
             switch (key) {
-                case "maKH":
-                    ketQua.removeIf(hd -> !hd.getMaKH().equals(value));
+                case "maHoaDon":
+                    ketQua.removeIf(hd -> !hd.getMaHoaDon().toLowerCase().contains(value.toString().toLowerCase()));
                     break;
-                case "maNV":
-                    ketQua.removeIf(hd -> !hd.getMaNV().equals(value));
+                case "tenKhachHang":
+                    ketQua.removeIf(hd -> !hd.getKhachHang().getHoTen().toLowerCase().contains(value.toString().toLowerCase()));
                     break;
-                case "maVe":
-                    ketQua.removeIf(hd -> !hd.getMaVe().equals(value));
+                case "cmnd":
+                    ketQua.removeIf(hd -> !hd.getKhachHang().getCmnd().contains(value.toString()));
                     break;
                 case "trangThai":
                     ketQua.removeIf(hd -> !hd.getTrangThai().equals(value));
@@ -178,356 +181,651 @@ public class DanhSachHoaDon implements IQuanLy<HoaDon>, IFileHandler {
                     Date denNgay = (Date) value;
                     ketQua.removeIf(hd -> hd.getNgayLap().after(denNgay));
                     break;
-                case "thanhTienMin":
-                    double thanhTienMin = (double) value;
-                    ketQua.removeIf(hd -> hd.getThanhTien() < thanhTienMin);
+                case "giaMin":
+                    double giaMin = (double) value;
+                    ketQua.removeIf(hd -> hd.getThanhTien() < giaMin);
                     break;
-                case "thanhTienMax":
-                    double thanhTienMax = (double) value;
-                    ketQua.removeIf(hd -> hd.getThanhTien() > thanhTienMax);
+                case "giaMax":
+                    double giaMax = (double) value;
+                    ketQua.removeIf(hd -> hd.getThanhTien() > giaMax);
                     break;
             }
         }
-        
+
         return ketQua;
     }
-    
+
     @Override
     public void hienThiTatCa() {
         if (danhSach.isEmpty()) {
-            System.out.println("Danh sách hóa đơn trống!");
+            System.out.println("📭 Danh sách hóa đơn trống!");
             return;
         }
-        
-        System.out.println("===== DANH SÁCH TẤT CẢ HÓA ĐƠN =====");
+
+        System.out.println("====== 📋 DANH SÁCH TẤT CẢ HÓA ĐƠN (" + danhSach.size() + " hóa đơn) ======");
         SimpleDateFormat sdf = new SimpleDateFormat("dd/MM/yyyy HH:mm");
         for (int i = 0; i < danhSach.size(); i++) {
             HoaDon hd = danhSach.get(i);
-            System.out.printf("%d. %s - Vé: %s - KH: %s - NV: %s - %,.0f VND - %s%n",
-                    i + 1, hd.getMaHoaDon(), hd.getMaVe(), hd.getMaKH(), 
-                    hd.getMaNV(), hd.getThanhTien(), hd.getTrangThai());
+            System.out.printf("%d. %s - %s - %s - %s - %,.0f VND - %s\n",
+                    i + 1, hd.getMaHoaDon(), hd.getKhachHang().getHoTen(),
+                    sdf.format(hd.getNgayLap()), hd.getPhuongThucTT(),
+                    hd.getThanhTien(), hd.getTrangThai());
         }
     }
-    
+
     @Override
     public void hienThiTheoTrangThai(String trangThai) {
-        List<HoaDon> ketQua = timKiemTheoTrangThai(trangThai);
-        
+        List<HoaDon> ketQua = danhSach.stream()
+                .filter(hd -> hd.getTrangThai().equals(trangThai))
+                .collect(Collectors.toList());
+
         if (ketQua.isEmpty()) {
-            System.out.println("Không có hóa đơn nào với trạng thái: " + trangThai);
+            System.out.println("📭 Không có hóa đơn nào với trạng thái: " + trangThai);
             return;
         }
-        
-        System.out.println("===== DANH SÁCH HÓA ĐƠN " + trangThai + " =====");
-        SimpleDateFormat sdf = new SimpleDateFormat("dd/MM/yyyy HH:mm");
+
+        System.out.println("====== 📋 DANH SÁCH HÓA ĐƠN " + trangThai + " (" + ketQua.size() + " hóa đơn) ======");
         for (int i = 0; i < ketQua.size(); i++) {
             HoaDon hd = ketQua.get(i);
-            System.out.printf("%d. %s - Vé: %s - %,.0f VND - %s%n",
-                    i + 1, hd.getMaHoaDon(), hd.getMaVe(), hd.getThanhTien(), 
-                    sdf.format(hd.getNgayLap()));
+            System.out.printf("%d. %s - %s - %,.0f VND\n",
+                    i + 1, hd.getMaHoaDon(), hd.getKhachHang().getHoTen(), hd.getThanhTien());
         }
     }
-    
+
     @Override
     public int demSoLuong() {
         return danhSach.size();
     }
-    
+
     @Override
     public boolean tonTai(String ma) {
         return danhSach.stream().anyMatch(hd -> hd.getMaHoaDon().equals(ma));
     }
-    
+
     @Override
     public void sapXepTheoMa() {
         danhSach.sort(Comparator.comparing(HoaDon::getMaHoaDon));
     }
-    
-    public void sapXepTheoNgayLap() {
-        danhSach.sort(Comparator.comparing(HoaDon::getNgayLap));
-    }
-    
-    public void sapXepTheoThanhTien() {
-        danhSach.sort(Comparator.comparingDouble(HoaDon::getThanhTien));
-    }
-    
-    public void sapXepTheoThanhTienGiamDan() {
-        danhSach.sort((hd1, hd2) -> Double.compare(hd2.getThanhTien(), hd1.getThanhTien()));
-    }
-    
+
     @Override
     public void sapXepTheoGia() {
-        // Áp dụng sắp xếp theo thành tiền
-        sapXepTheoThanhTien();
+        danhSach.sort(Comparator.comparingDouble(HoaDon::getThanhTien));
     }
-    
+
     @Override
     public void sapXepTheoNgayBay() {
-        // Không áp dụng
-        System.out.println("Không áp dụng sắp xếp theo ngày bay cho hóa đơn");
+        danhSach.sort(Comparator.comparing(HoaDon::getNgayLap));
     }
-    
-    // SỬA: Thêm phương thức phân trang
+
+    // ========== PHÂN TRANG CHO GUI ==========
     public List<HoaDon> phanTrang(int trang, int kichThuocTrang) {
         int batDau = (trang - 1) * kichThuocTrang;
         int ketThuc = Math.min(batDau + kichThuocTrang, danhSach.size());
-        
-        if (batDau >= danhSach.size()) {
+
+        if (batDau >= danhSach.size() || batDau < 0) {
             return new ArrayList<>();
         }
-        
-        return danhSach.subList(batDau, ketThuc);
+
+        return new ArrayList<>(danhSach.subList(batDau, ketThuc));
     }
-    
-    // SỬA: Thêm phương thức tìm kiếm gần đúng
-    public List<HoaDon> timKiemGanDung(String keyword) {
-        List<HoaDon> ketQua = new ArrayList<>();
-        String keywordLower = keyword.toLowerCase();
-        
-        for (HoaDon hd : danhSach) {
-            if (hd.getMaHoaDon().toLowerCase().contains(keywordLower) ||
-                hd.getMaVe().toLowerCase().contains(keywordLower) ||
-                hd.getMaKH().toLowerCase().contains(keywordLower) ||
-                hd.getMaNV().toLowerCase().contains(keywordLower) ||
-                hd.getTrangThai().toLowerCase().contains(keywordLower) ||
-                hd.getPhuongThucTT().toLowerCase().contains(keywordLower)) {
-                ketQua.add(hd);
-            }
-        }
-        return ketQua;
+
+    public int getTongSoTrang(int kichThuocTrang) {
+        return (int) Math.ceil((double) danhSach.size() / kichThuocTrang);
     }
-    
+
+    // ========== SẮP XẾP NÂNG CAO CHO GUI ==========
+    public void sapXepTheoNgayLap() {
+        danhSach.sort(Comparator.comparing(HoaDon::getNgayLap));
+    }
+
+    public void sapXepTheoNgayLapGiamDan() {
+        danhSach.sort((hd1, hd2) -> hd2.getNgayLap().compareTo(hd1.getNgayLap()));
+    }
+
+    public void sapXepTheoTenKhachHang() {
+        danhSach.sort(Comparator.comparing(hd -> hd.getKhachHang().getHoTen()));
+    }
+
+    public void sapXepTheoThanhTienGiamDan() {
+        danhSach.sort((hd1, hd2) -> Double.compare(hd2.getThanhTien(), hd1.getThanhTien()));
+    }
+
     // ========== IMPLEMENT IFILEHANDLER ==========
     @Override
     public boolean docFile(String tenFile) {
-        return docFileXML1(tenFile);
-    }
-    
-    // SỬA: Phương thức đọc file XML
-    private boolean docFileXML1(String tenFile) {
         try {
             List<Map<String, String>> dataList = XMLUtils.docFileXML(tenFile);
-            
+
             if (dataList == null || dataList.isEmpty()) {
-                System.out.println("❌ Khong co du lieu trong file");
+                System.out.println("❌ Không có dữ liệu trong file XML hoặc file không tồn tại");
                 return false;
             }
-            
-            int count = 0;
+
+            int countSuccess = 0;
             for (Map<String, String> data : dataList) {
                 try {
-                    // Kiểm tra dữ liệu bắt buộc
-                    if (data.get("MaHoaDon") == null || data.get("MaHoaDon").isEmpty()) {
+                    HoaDon hoaDon = taoHoaDonTuDataXML(data);
+                    if (hoaDon == null) {
                         continue;
                     }
-                    
-                    // Tạo đối tượng HoaDon từ dữ liệu XML
-                    HoaDon hd = new HoaDon(
-                            data.get("MaVe"),
-                            data.get("MaKH"),
-                            data.get("MaNV"),
-                            XMLUtils.stringToDouble(data.get("TongTien")),
-                            XMLUtils.stringToDouble(data.get("Thue")),
-                            XMLUtils.stringToDouble(data.get("KhuyenMai")),
-                            data.get("PhuongThucTT")
-                    );
-                    
-                    // Cập nhật các thuộc tính bổ sung
-                    hd.setNgayLap(XMLUtils.stringToDate(data.get("NgayLap")));
-                    hd.setTrangThai(data.get("TrangThai"));
-                    
-                    // Thêm vào danh sách (kiểm tra trùng trước khi thêm)
-                    if (!tonTai(hd.getMaHoaDon())) {
-                        danhSach.add(hd);
-                        count++;
-                    } else {
+
+                    // Kiểm tra trùng mã hóa đơn
+                    if (tonTai(hoaDon.getMaHoaDon())) {
+                        continue;
                     }
-                    
+
+                    // Thêm vào danh sách
+                    danhSach.add(hoaDon);
+                    countSuccess++;
+
                 } catch (Exception e) {
-                    System.out.println("❌ Lỗi tạo HoaDon từ XML: " + e.getMessage());
-                    e.printStackTrace();
+                    System.out.println("❌ Lỗi xử lý hóa đơn: " + data.get("MaHoaDon") + " - " + e.getMessage());
                 }
             }
-            
-            return count > 0;
-            
+
+            System.out.println("✅ Đã tải " + countSuccess + " hóa đơn từ file XML");
+            return countSuccess > 0;
+
         } catch (Exception e) {
-            e.printStackTrace();
+            System.out.println("💥 LỖI NGHIÊM TRỌNG khi đọc file: " + e.getMessage());
             return false;
         }
     }
-    
+
+    private HoaDon taoHoaDonTuDataXML(Map<String, String> data) {
+    try {
+        // Lấy thông tin cơ bản
+        String maHoaDon = data.get("MaHoaDon");
+        Date ngayLap = XMLUtils.stringToDate(data.get("NgayLap"));
+        double tongTien = XMLUtils.stringToDouble(data.get("TongTien"));
+        double thue = XMLUtils.stringToDouble(data.get("Thue"));
+        double khuyenMai = XMLUtils.stringToDouble(data.get("KhuyenMai"));
+        double thanhTien = XMLUtils.stringToDouble(data.get("ThanhTien"));
+        String phuongThucTT = data.get("PhuongThucTT");
+        String trangThai = data.get("TrangThai");
+
+        // Tạo khách hàng từ dữ liệu XML
+        KhachHang khachHang = taoKhachHangTuData(data);
+        if (khachHang == null) {
+            System.out.println("❌ Không thể tạo khách hàng cho hóa đơn: " + maHoaDon);
+            return null;
+        }
+        DanhSachVeMayBay dsv = new DanhSachVeMayBay();
+        dsv.docFile("src/resources/data/3_VeMayBays.xml");
+        List<VeMayBay> DSVe = taoDSVeTuData(data, dsv);
+
+        // Tạo hóa đơn với constructor mới
+        HoaDon hoaDon = new HoaDon(maHoaDon, ngayLap, khachHang, tongTien, thue, khuyenMai, phuongThucTT, trangThai, DSVe);
+        
+        // Đảm bảo thành tiền tính đúng
+        hoaDon.setThanhTien(thanhTien);
+
+        return hoaDon;
+
+    } catch (Exception e) {
+        System.out.println("❌ Lỗi tạo hóa đơn từ XML data: " + e.getMessage());
+        e.printStackTrace();
+        return null;
+    }
+}
+
+
+    private KhachHang taoKhachHangTuData(Map<String, String> data) {
+        // Trong thực tế, cần lấy khách hàng từ DanhSachKhachHang
+        // Ở đây tạo tạm một khách hàng từ dữ liệu XML
+        try {
+            return new KhachHang(
+                    data.get("MaKH"),
+                    data.get("HoTen"),
+                    data.get("SoDT"),
+                    data.get("Email"),
+                    data.get("CMND"),
+                    XMLUtils.stringToDate(data.get("NgaySinh")),
+                    data.get("GioiTinh"),
+                    data.get("DiaChi"),
+                    data.get("TenDangNhap"),
+                    data.get("MatKhau")
+            );
+        } catch (Exception e) {
+            System.out.println("❌ Lỗi tạo khách hàng từ XML: " + e.getMessage());
+            return null;
+        }
+    }
+   private List<VeMayBay> taoDSVeTuData(Map<String, String> data, DanhSachVeMayBay danhSachVeMayBay) {
+    try {
+        List<VeMayBay> danhSachVe = new ArrayList<>();
+        
+        // Lấy danh sách mã vé từ XML
+        String danhSachMaVe = data.get("DanhSachMaVe");
+        if (danhSachMaVe == null || danhSachMaVe.trim().isEmpty()) {
+            System.out.println("⚠️ Không có danh sách vé cho hóa đơn: " + data.get("MaHoaDon"));
+            return danhSachVe;
+        }
+        
+        // Tách các mã vé bằng dấu phẩy hoặc khoảng trắng
+        String[] maVes = danhSachMaVe.split("[, ]+");
+        
+        // Truy xuất vé từ danh sách vé có sẵn
+        for (String maVe : maVes) {
+            String maVeTrim = maVe.trim();
+            if (!maVeTrim.isEmpty()) {
+                // Tìm vé trong danh sách vé máy bay
+                VeMayBay ve = danhSachVeMayBay.timKiemTheoMa(maVeTrim);
+                if (ve != null) {
+                    danhSachVe.add(ve);
+                    System.out.println("✅ Đã tìm thấy vé: " + maVeTrim + " cho hóa đơn: " + data.get("MaHoaDon"));
+                } else {
+                    System.out.println("❌ Không tìm thấy vé: " + maVeTrim + " trong danh sách vé");
+                }
+            }
+        }
+        
+        System.out.println("✅ Đã tìm thấy " + danhSachVe.size() + " vé cho hóa đơn: " + data.get("MaHoaDon"));
+        return danhSachVe;
+        
+    } catch (Exception e) {
+        System.out.println("❌ Lỗi tạo danh sách vé từ XML: " + e.getMessage());
+        return new ArrayList<>();
+    }
+}
+
     @Override
     public boolean ghiFile(String tenFile) {
-        return ghiFileXML(tenFile);
-    }
-    
-    // SỬA: Phương thức ghi file XML
-    private boolean ghiFileXML(String tenFile) {
         try {
             List<Map<String, String>> dataList = new ArrayList<>();
-            
+
             for (HoaDon hd : danhSach) {
                 Map<String, String> data = new HashMap<>();
+
+                // Thông tin cơ bản
                 data.put("MaHoaDon", hd.getMaHoaDon());
                 data.put("NgayLap", XMLUtils.dateToString(hd.getNgayLap()));
-                data.put("MaVe", hd.getMaVe());
-                data.put("MaKH", hd.getMaKH());
-                data.put("MaNV", hd.getMaNV());
                 data.put("TongTien", String.valueOf(hd.getTongTien()));
                 data.put("Thue", String.valueOf(hd.getThue()));
                 data.put("KhuyenMai", String.valueOf(hd.getKhuyenMai()));
                 data.put("ThanhTien", String.valueOf(hd.getThanhTien()));
                 data.put("PhuongThucTT", hd.getPhuongThucTT());
                 data.put("TrangThai", hd.getTrangThai());
-                
+
+                // Thông tin khách hàng
+                KhachHang kh = hd.getKhachHang();
+                data.put("MaKH", kh.getMa());
+                data.put("HoTen", kh.getHoTen());
+                data.put("SoDT", kh.getSoDT());
+                data.put("Email", kh.getEmail());
+                data.put("CMND", kh.getCmnd());
+                data.put("NgaySinh", XMLUtils.dateToString(kh.getNgaySinh()));
+                data.put("GioiTinh", kh.getGioiTinh());
+                data.put("DiaChi", kh.getDiaChi());
+                data.put("TenDangNhap", kh.getTenDangNhap());
+                data.put("MatKhau", kh.getMatKhau());
+
+                // Thông tin vé (chỉ lưu mã vé)
+                List<String> maVes = hd.getDanhSachVe().stream()
+                        .map(VeMayBay::getMaVe)
+                        .collect(Collectors.toList());
+                data.put("DanhSachMaVe", String.join(",", maVes));
+
                 dataList.add(data);
             }
-            
-            return ghiFileXML(tenFile, dataList, "HoaDons");
-            
+
+            boolean result = XMLUtils.ghiFileXML(tenFile, dataList, "HoaDons");
+            if (result) {
+                System.out.println("✅ Ghi file XML thành công: " + danhSach.size() + " hóa đơn");
+            }
+            return result;
+
         } catch (Exception e) {
             System.out.println("❌ Lỗi ghi file XML: " + e.getMessage());
-            e.printStackTrace();
             return false;
         }
     }
-    
-    // ========== PHƯƠNG THỨC NGHIỆP VỤ ==========
+
+    // ========== IMPLEMENT ITHONGKE ==========
+    @Override
     public double tinhTongDoanhThu() {
         return danhSach.stream()
-                      .filter(hd -> hd.getTrangThai().equals(HoaDon.TT_DA_TT))
-                      .mapToDouble(HoaDon::getThanhTien)
-                      .sum();
+                .filter(hd -> hd.getTrangThai().equals(HoaDon.TT_DA_TT))
+                .mapToDouble(HoaDon::getThanhTien)
+                .sum();
     }
-    
-    public double tinhDoanhThuTheoThang(int thang, int nam) {
+
+    @Override
+    public int demSoLuongTheoLoai(String loai) {
+        // Không áp dụng cho hóa đơn
+        return 0;
+    }
+
+    @Override
+    public double tinhDoanhThuTheoLoai(String loai) {
+        // Không áp dụng cho hóa đơn
+        return 0;
+    }
+
+    @Override
+    public Map<String, Integer> thongKeTheoThang(int thang, int nam) {
+        Map<String, Integer> thongKe = new HashMap<>();
         Calendar cal = Calendar.getInstance();
-        return danhSach.stream()
-                      .filter(hd -> {
-                          cal.setTime(hd.getNgayLap());
-                          int hdThang = cal.get(Calendar.MONTH) + 1;
-                          int hdNam = cal.get(Calendar.YEAR);
-                          return hd.getTrangThai().equals(HoaDon.TT_DA_TT) && 
-                                 hdThang == thang && hdNam == nam;
-                      })
-                      .mapToDouble(HoaDon::getThanhTien)
-                      .sum();
+
+        for (HoaDon hd : danhSach) {
+            cal.setTime(hd.getNgayLap());
+            int hdThang = cal.get(Calendar.MONTH) + 1;
+            int hdNam = cal.get(Calendar.YEAR);
+
+            if (hdThang == thang && hdNam == nam) {
+                String trangThai = hd.getTrangThai();
+                thongKe.put(trangThai, thongKe.getOrDefault(trangThai, 0) + 1);
+            }
+        }
+
+        return thongKe;
     }
-    
-    public Map<String, Double> thongKeDoanhThuTheoThang(int nam) {
+
+    @Override
+    public Map<String, Double> thongKeDoanhThuTheoThang(int thang, int nam) {
         Map<String, Double> thongKe = new HashMap<>();
         Calendar cal = Calendar.getInstance();
-        
+
+        for (HoaDon hd : danhSach) {
+            if (!hd.getTrangThai().equals(HoaDon.TT_DA_TT)) continue;
+
+            cal.setTime(hd.getNgayLap());
+            int hdThang = cal.get(Calendar.MONTH) + 1;
+            int hdNam = cal.get(Calendar.YEAR);
+
+            if (hdThang == thang && hdNam == nam) {
+                String phuongThuc = hd.getPhuongThucTT();
+                thongKe.put(phuongThuc, thongKe.getOrDefault(phuongThuc, 0.0) + hd.getThanhTien());
+            }
+        }
+
+        return thongKe;
+    }
+
+    @Override
+    public Map<String, Integer> thongKeTheoChuyenBay() {
+        Map<String, Integer> thongKe = new HashMap<>();
+        for (HoaDon hd : danhSach) {
+            for (VeMayBay ve : hd.getDanhSachVe()) {
+                String chuyenBay = ve.getMaChuyen();
+                thongKe.put(chuyenBay, thongKe.getOrDefault(chuyenBay, 0) + 1);
+            }
+        }
+        return thongKe;
+    }
+
+    @Override
+    public Map<String, Double> thongKeDoanhThuTheoChuyenBay() {
+        Map<String, Double> thongKe = new HashMap<>();
         for (HoaDon hd : danhSach) {
             if (hd.getTrangThai().equals(HoaDon.TT_DA_TT)) {
-                cal.setTime(hd.getNgayLap());
-                int thang = cal.get(Calendar.MONTH) + 1;
-                int hdNam = cal.get(Calendar.YEAR);
-                
-                if (hdNam == nam) {
-                    String key = "Tháng " + thang;
-                    thongKe.put(key, thongKe.getOrDefault(key, 0.0) + hd.getThanhTien());
+                for (VeMayBay ve : hd.getDanhSachVe()) {
+                    String chuyenBay = ve.getMaChuyen();
+                    thongKe.put(chuyenBay, thongKe.getOrDefault(chuyenBay, 0.0) + ve.getGiaVe());
                 }
             }
         }
-        
         return thongKe;
     }
-    
-    public Map<String, Integer> thongKeTheoPhuongThucTT() {
-        Map<String, Integer> thongKe = new HashMap<>();
+
+    @Override
+    public Map<String, Object> thongKeTheoKhoangNgay(Date from, Date to) {
+        Map<String, Object> thongKe = new HashMap<>();
+        int tongHoaDon = 0;
+        double tongDoanhThu = 0;
+        Map<String, Integer> theoTrangThai = new HashMap<>();
+        Map<String, Double> doanhThuTheoPhuongThuc = new HashMap<>();
+
         for (HoaDon hd : danhSach) {
-            String phuongThuc = hd.getPhuongThucTT();
-            thongKe.put(phuongThuc, thongKe.getOrDefault(phuongThuc, 0) + 1);
+            if (hd.getNgayLap().after(from) && hd.getNgayLap().before(to)) {
+                tongHoaDon++;
+                if (hd.getTrangThai().equals(HoaDon.TT_DA_TT)) {
+                    tongDoanhThu += hd.getThanhTien();
+                }
+
+                // Thống kê theo trạng thái
+                String trangThai = hd.getTrangThai();
+                theoTrangThai.put(trangThai, theoTrangThai.getOrDefault(trangThai, 0) + 1);
+
+                // Thống kê doanh thu theo phương thức
+                if (hd.getTrangThai().equals(HoaDon.TT_DA_TT)) {
+                    String phuongThuc = hd.getPhuongThucTT();
+                    doanhThuTheoPhuongThuc.put(phuongThuc,
+                            doanhThuTheoPhuongThuc.getOrDefault(phuongThuc, 0.0) + hd.getThanhTien());
+                }
+            }
         }
+
+        thongKe.put("tongHoaDon", tongHoaDon);
+        thongKe.put("tongDoanhThu", tongDoanhThu);
+        thongKe.put("theoTrangThai", theoTrangThai);
+        thongKe.put("doanhThuTheoPhuongThuc", doanhThuTheoPhuongThuc);
+
         return thongKe;
     }
-    
-    public Map<String, Integer> thongKeTheoTrangThai() {
+
+    @Override
+    public Map<String, Integer> thongKeKhachHangThuongXuyen(int soChuyenToiThieu) {
         Map<String, Integer> thongKe = new HashMap<>();
+        Map<String, Integer> demKhachHang = new HashMap<>();
+
         for (HoaDon hd : danhSach) {
-            String trangThai = hd.getTrangThai();
-            thongKe.put(trangThai, thongKe.getOrDefault(trangThai, 0) + 1);
+            if (hd.getTrangThai().equals(HoaDon.TT_DA_TT)) {
+                String maKH = hd.getKhachHang().getMa();
+                demKhachHang.put(maKH, demKhachHang.getOrDefault(maKH, 0) + 1);
+            }
         }
+
+        // Lọc những khách hàng có số hóa đơn >= số chuyến tối thiểu
+        for (Map.Entry<String, Integer> entry : demKhachHang.entrySet()) {
+            if (entry.getValue() >= soChuyenToiThieu) {
+                thongKe.put(entry.getKey(), entry.getValue());
+            }
+        }
+
         return thongKe;
     }
-    
-    public List<HoaDon> getHoaDonChuaThanhToan() {
-        return danhSach.stream()
-                      .filter(hd -> hd.getTrangThai().equals(HoaDon.TT_CHUA_TT))
-                      .toList();
+
+    @Override
+    public double tinhTyLeDoanhThuTheoLoai() {
+        return 1.0;
     }
-    
+
+    @Override
+    public Map<String, Double> thongKeTyLeDoanhThu() {
+        Map<String, Double> tyLe = new HashMap<>();
+        double tongDoanhThu = tinhTongDoanhThu();
+
+        if (tongDoanhThu > 0) {
+            // Thống kê theo phương thức thanh toán
+            Map<String, Double> doanhThuTheoPhuongThuc = new HashMap<>();
+            for (HoaDon hd : danhSach) {
+                if (hd.getTrangThai().equals(HoaDon.TT_DA_TT)) {
+                    String phuongThuc = hd.getPhuongThucTT();
+                    doanhThuTheoPhuongThuc.put(phuongThuc,
+                            doanhThuTheoPhuongThuc.getOrDefault(phuongThuc, 0.0) + hd.getThanhTien());
+                }
+            }
+
+            for (Map.Entry<String, Double> entry : doanhThuTheoPhuongThuc.entrySet()) {
+                tyLe.put(entry.getKey(), (entry.getValue() / tongDoanhThu) * 100);
+            }
+        }
+
+        return tyLe;
+    }
+
+    // ========== PHƯƠNG THỨC NGHIỆP VỤ CHO GUI ==========
     public boolean thanhToanHoaDon(String maHoaDon) {
         HoaDon hd = timKiemTheoMa(maHoaDon);
-        if (hd != null) {
-            try {
-                hd.thanhToan();
-                System.out.println("✅ Thanh toán hóa đơn thành công: " + maHoaDon);
-                return true;
-            } catch (IllegalStateException e) {
-                System.out.println("❌ Lỗi thanh toán: " + e.getMessage());
-                return false;
-            }
+        if (hd == null) {
+            throw new IllegalArgumentException("Không tìm thấy hóa đơn với mã: " + maHoaDon);
         }
-        System.out.println("❌ Không tìm thấy hóa đơn: " + maHoaDon);
-        return false;
+
+        try {
+            hd.thanhToan();
+            return true;
+        } catch (IllegalStateException e) {
+            throw new IllegalStateException("Không thể thanh toán hóa đơn: " + e.getMessage());
+        }
     }
-    
+
     public boolean huyHoaDon(String maHoaDon) {
         HoaDon hd = timKiemTheoMa(maHoaDon);
-        if (hd != null) {
-            try {
-                hd.huyHoaDon();
-                System.out.println("✅ Hủy hóa đơn thành công: " + maHoaDon);
-                return true;
-            } catch (IllegalStateException e) {
-                System.out.println("❌ Lỗi hủy hóa đơn: " + e.getMessage());
-                return false;
+        if (hd == null) {
+            throw new IllegalArgumentException("Không tìm thấy hóa đơn với mã: " + maHoaDon);
+        }
+
+        try {
+            hd.huyHoaDon();
+            return true;
+        } catch (IllegalStateException e) {
+            throw new IllegalStateException("Không thể hủy hóa đơn: " + e.getMessage());
+        }
+    }
+
+    public boolean kiemTraCoTheHuy(String maHoaDon) {
+        HoaDon hd = timKiemTheoMa(maHoaDon);
+        return hd != null && hd.coTheHuy();
+    }
+
+    public void apDungKhuyenMai(String maHoaDon, double khuyenMai) {
+        HoaDon hd = timKiemTheoMa(maHoaDon);
+        if (hd == null) {
+            throw new IllegalArgumentException("Không tìm thấy hóa đơn với mã: " + maHoaDon);
+        }
+
+        try {
+            hd.apDungKhuyenMai(khuyenMai);
+        } catch (IllegalArgumentException e) {
+            throw new IllegalArgumentException("Không thể áp dụng khuyến mãi: " + e.getMessage());
+        }
+    }
+
+    public boolean xoaVeKhoiHoaDon(String maHoaDon, VeMayBay ve) {
+        HoaDon hd = timKiemTheoMa(maHoaDon);
+        if (hd == null) {
+            throw new IllegalArgumentException("Không tìm thấy hóa đơn với mã: " + maHoaDon);
+        }
+
+        try {
+            hd.xoaVe(ve);
+            return true;
+        } catch (IllegalStateException e) {
+            throw new IllegalStateException("Không thể xóa vé khỏi hóa đơn: " + e.getMessage());
+        }
+    }
+
+    // ========== THỐNG KÊ NÂNG CAO CHO GUI ==========
+    @Override
+    public Map<String, Object> thongKeTongHop(Date from, Date to) {
+        Map<String, Object> tongHop = new HashMap<>();
+
+        // Lấy thống kê cơ bản
+        Map<String, Object> thongKeCoBan = thongKeTheoKhoangNgay(from, to);
+        tongHop.putAll(thongKeCoBan);
+
+        // Thêm các chỉ số nâng cao
+        int tongHoaDon = (int) thongKeCoBan.get("tongHoaDon");
+        double tongDoanhThu = (double) thongKeCoBan.get("tongDoanhThu");
+        double doanhThuTrungBinh = tongHoaDon > 0 ? tongDoanhThu / tongHoaDon : 0;
+
+        tongHop.put("doanhThuTrungBinh", doanhThuTrungBinh);
+        return tongHop;
+    }
+
+    @Override
+    public List<Map<String, Object>> thongKeTopKhachHang(int limit) {
+        Map<String, Double> doanhThuKhachHang = new HashMap<>();
+
+        for (HoaDon hd : danhSach) {
+            if (hd.getTrangThai().equals(HoaDon.TT_DA_TT)) {
+                String maKH = hd.getKhachHang().getMa();
+                doanhThuKhachHang.put(maKH, doanhThuKhachHang.getOrDefault(maKH, 0.0) + hd.getThanhTien());
             }
         }
-        System.out.println("❌ Không tìm thấy hóa đơn: " + maHoaDon);
-        return false;
+
+        return doanhThuKhachHang.entrySet().stream()
+                .sorted((e1, e2) -> Double.compare(e2.getValue(), e1.getValue()))
+                .limit(limit)
+                .map(entry -> {
+                    Map<String, Object> info = new HashMap<>();
+                    info.put("maKH", entry.getKey());
+                    info.put("tongChiTieu", entry.getValue());
+                    return info;
+                })
+                .collect(Collectors.toList());
     }
-    
-    public List<HoaDon> getDanhSach() {
-        return new ArrayList<>(danhSach);
-    }
-    
-    // Phương thức tiện ích
-    public void xoaTatCa() {
-        danhSach.clear();
-        System.out.println("✅ Đã xóa tất cả hóa đơn!");
-    }
-    
-    public void hienThiThongKe() {
-        System.out.println("===== THỐNG KÊ HÓA ĐƠN =====");
-        System.out.println("Tổng số hóa đơn: " + demSoLuong());
-        System.out.println("Tổng doanh thu: " + String.format("%,.0f VND", tinhTongDoanhThu()));
-        
-        Map<String, Integer> thongKeTrangThai = thongKeTheoTrangThai();
-        System.out.println("📊 Phân bố trạng thái:");
-        for (Map.Entry<String, Integer> entry : thongKeTrangThai.entrySet()) {
-            System.out.printf("   - %s: %d hóa đơn%n", entry.getKey(), entry.getValue());
+
+    @Override
+    public Map<String, Integer> thongKeTheoGioTrongNgay() {
+        Map<String, Integer> thongKe = new HashMap<>();
+        Calendar cal = Calendar.getInstance();
+
+        for (HoaDon hd : danhSach) {
+            cal.setTime(hd.getNgayLap());
+            int gio = cal.get(Calendar.HOUR_OF_DAY);
+            String khoangGio = String.format("%02d:00-%02d:00", gio, gio + 1);
+            thongKe.put(khoangGio, thongKe.getOrDefault(khoangGio, 0) + 1);
         }
-        
-        Map<String, Integer> thongKePhuongThuc = thongKeTheoPhuongThucTT();
-        System.out.println("💳 Phân bố phương thức thanh toán:");
-        for (Map.Entry<String, Integer> entry : thongKePhuongThuc.entrySet()) {
-            System.out.printf("   - %s: %d hóa đơn%n", entry.getKey(), entry.getValue());
-        }
-        
-        List<HoaDon> chuaThanhToan = getHoaDonChuaThanhToan();
-        System.out.println("⏳ Hóa đơn chưa thanh toán: " + chuaThanhToan.size());
+
+        return thongKe;
     }
-    public List<HoaDon> timKiemTheoMaKH(String maKH) {
-    List<HoaDon> ketQua = new ArrayList<>();
-    for (HoaDon ve : danhSach) {
-        if (ve.getMaKH() != null && ve.getMaKH().equals(maKH)) {
-            ketQua.add(ve);
+
+    @Override
+    public double tinhDoanhThuTrungBinhTheoChuyen() {
+        Map<String, Double> doanhThuChuyen = thongKeDoanhThuTheoChuyenBay();
+        if (doanhThuChuyen.isEmpty()) return 0;
+
+        double tongDoanhThu = doanhThuChuyen.values().stream().mapToDouble(Double::doubleValue).sum();
+        return tongDoanhThu / doanhThuChuyen.size();
+    }
+
+    // ========== PHƯƠNG THỨC TIỆN ÍCH CHO GUI ==========
+    public List<String> getDanhSachTrangThai() {
+        return Arrays.asList(
+                HoaDon.TT_CHUA_TT,
+                HoaDon.TT_DA_TT,
+                HoaDon.TT_HUY
+        );
+    }
+
+    public List<String> getDanhSachPhuongThucTT() {
+        return Arrays.asList(
+                HoaDon.PT_TIEN_MAT,
+                HoaDon.PT_CHUYEN_KHOAN,
+                HoaDon.PT_THE,
+                HoaDon.PT_VI_DIEN_TU
+        );
+    }
+
+    public List<String> getDanhSachMaKhachHang() {
+        return danhSach.stream()
+                .map(hd -> hd.getKhachHang().getMa())
+                .distinct()
+                .sorted()
+                .collect(Collectors.toList());
+    }
+
+    public Map<String, Object> thongKeTongQuan() {
+        Map<String, Object> thongKe = new HashMap<>();
+        thongKe.put("tongHoaDon", danhSach.size());
+        thongKe.put("tongDoanhThu", tinhTongDoanhThu());
+        thongKe.put("hoaDonChuaThanhToan", danhSach.stream()
+                .filter(hd -> hd.getTrangThai().equals(HoaDon.TT_CHUA_TT)).count());
+        thongKe.put("hoaDonDaThanhToan", danhSach.stream()
+                .filter(hd -> hd.getTrangThai().equals(HoaDon.TT_DA_TT)).count());
+        thongKe.put("hoaDonDaHuy", danhSach.stream()
+                .filter(hd -> hd.getTrangThai().equals(HoaDon.TT_HUY)).count());
+
+        return thongKe;
+    }
+    public static void main(String[] args) {
+        DanhSachHoaDon ds = new DanhSachHoaDon();
+        ds.docFile("src/resources/data/4_HoaDons.xml");
+        ds.hienThiTatCa();
+        for(HoaDon hd : ds.danhSach){
+            System.out.println(hd.getDanhSachVe());
         }
     }
-    return ketQua;
-}
 }
