@@ -1,22 +1,13 @@
-/*
- * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
- * Click nbfs://nbhost/SystemFileSystem/Templates/Other/File.java to edit this template
- */
 package Sevice;
 
-/**
- *
- * @author HP
- */
-// File: DanhSachKhachHang.java
 import java.util.*;
+import java.text.SimpleDateFormat;
+import java.util.stream.Collectors;
+
 import model.KhachHang;
 import repository.IFileHandler;
 import repository.IQuanLy;
 import repository.XMLUtils;
-
-import java.io.*;
-import java.text.SimpleDateFormat;
 
 public class DanhSachKhachHang implements IQuanLy<KhachHang>, IFileHandler {
 
@@ -27,136 +18,98 @@ public class DanhSachKhachHang implements IQuanLy<KhachHang>, IFileHandler {
         this.danhSach = new ArrayList<>();
     }
 
+    // ========== GETTERS ==========
+    public List<KhachHang> getDanhSach() {
+        return new ArrayList<>(danhSach);
+    }
+
     // ========== IMPLEMENT IQUANLY ==========
     @Override
     public boolean them(KhachHang khachHang) {
         if (danhSach.size() >= MAX_SIZE) {
-            System.out.println("Danh sách khách hàng đã đầy!");
-            return false;
+            throw new IllegalStateException("Danh sách khách hàng đã đầy!");
         }
 
-        if (tonTai(khachHang.getMaKH())) {
-            System.out.println("Mã khách hàng đã tồn tại!");
-            return false;
+        if (tonTai(khachHang.getMa())) {
+            throw new IllegalArgumentException("Mã khách hàng đã tồn tại: " + khachHang.getMa());
         }
 
-        // Kiểm tra CMND trùng
         if (tonTaiCMND(khachHang.getCmnd(), null)) {
-            System.out.println("CMND đã tồn tại!");
-            return false;
+            throw new IllegalArgumentException("CMND đã tồn tại: " + khachHang.getCmnd());
         }
 
-        danhSach.add(khachHang);
-        System.out.println("Thêm khách hàng thành công!");
-        return true;
+        if (tonTaiEmail(khachHang.getEmail(), null)) {
+            throw new IllegalArgumentException("Email đã tồn tại: " + khachHang.getEmail());
+        }
+
+        return danhSach.add(khachHang);
     }
 
     @Override
     public boolean xoa(String maKH) {
-        for (Iterator<KhachHang> iterator = danhSach.iterator(); iterator.hasNext();) {
-            KhachHang kh = iterator.next();
-            if (kh.getMaKH().equals(maKH)) {
-                iterator.remove();
-                System.out.println("Xóa khách hàng thành công!");
-                return true;
-            }
+        KhachHang khachHang = timKiemTheoMa(maKH);
+        if (khachHang == null) {
+            throw new IllegalArgumentException("Không tìm thấy khách hàng với mã: " + maKH);
         }
-        System.out.println("Không tìm thấy khách hàng với mã: " + maKH);
-        return false;
+
+        // Kiểm tra nếu khách hàng có vé đang hoạt động
+        if (coVeDangHoatDong(khachHang)) {
+            throw new IllegalStateException("Không thể xóa khách hàng đang có vé đặt hoặc chưa bay!");
+        }
+
+        return danhSach.remove(khachHang);
     }
 
     @Override
     public boolean sua(String maKH, KhachHang khachHangMoi) {
-        for (int i = 0; i < danhSach.size(); i++) {
-            if (danhSach.get(i).getMaKH().equals(maKH)) {
-                // Kiểm tra CMND trùng (trừ chính nó)
-                if (tonTaiCMND(khachHangMoi.getCmnd(), maKH)) {
-                    System.out.println("CMND đã tồn tại!");
-                    return false;
-                }
-                danhSach.set(i, khachHangMoi);
-                System.out.println("Cập nhật khách hàng thành công!");
-                return true;
-            }
+        KhachHang khachHangCu = timKiemTheoMa(maKH);
+        if (khachHangCu == null) {
+            throw new IllegalArgumentException("Không tìm thấy khách hàng với mã: " + maKH);
         }
-        System.out.println("Không tìm thấy khách hàng với mã: " + maKH);
-        return false;
+
+        if (!maKH.equals(khachHangMoi.getMa()) && tonTai(khachHangMoi.getMa())) {
+            throw new IllegalArgumentException("Mã khách hàng mới đã tồn tại!");
+        }
+
+        if (tonTaiCMND(khachHangMoi.getCmnd(), maKH)) {
+            throw new IllegalArgumentException("CMND đã tồn tại!");
+        }
+
+        if (tonTaiEmail(khachHangMoi.getEmail(), maKH)) {
+            throw new IllegalArgumentException("Email đã tồn tại!");
+        }
+
+        int index = danhSach.indexOf(khachHangCu);
+        danhSach.set(index, khachHangMoi);
+        return true;
     }
 
     @Override
     public KhachHang timKiemTheoMa(String maKH) {
         return danhSach.stream()
-                .filter(kh -> kh.getMaKH().equals(maKH))
+                .filter(kh -> kh.getMa().equals(maKH))
                 .findFirst()
                 .orElse(null);
     }
 
     @Override
     public List<KhachHang> timKiemTheoTen(String ten) {
-        List<KhachHang> ketQua = new ArrayList<>();
-        for (KhachHang kh : danhSach) {
-            if (kh.getHoTen().toLowerCase().contains(ten.toLowerCase())) {
-                ketQua.add(kh);
-            }
-        }
-        return ketQua;
+        String keyword = ten.toLowerCase();
+        return danhSach.stream()
+                .filter(kh -> kh.getHoTen().toLowerCase().contains(keyword))
+                .collect(Collectors.toList());
     }
 
     @Override
     public KhachHang timKiemTheoCMND(String cmnd) {
-        for (KhachHang kh : danhSach) {
-            if (kh.getCmnd().equals(cmnd)) {
-                return kh;
-            }
-        }
-        return null;
+        return danhSach.stream()
+                .filter(kh -> kh.getCmnd().equals(cmnd))
+                .findFirst()
+                .orElse(null);
     }
 
-    // PHƯƠNG THỨC MỚI: Tìm kiếm theo email
-    public List<KhachHang> timKiemTheoEmail(String email) {
-        List<KhachHang> ketQua = new ArrayList<>();
-        for (KhachHang kh : danhSach) {
-            if (kh.getEmail().toLowerCase().contains(email.toLowerCase())) {
-                ketQua.add(kh);
-            }
-        }
-        return ketQua;
-    }
-
-    // PHƯƠNG THỨC MỚI: Tìm kiếm theo số điện thoại
-    public List<KhachHang> timKiemTheoSoDT(String soDT) {
-        List<KhachHang> ketQua = new ArrayList<>();
-        for (KhachHang kh : danhSach) {
-            if (kh.getSoDT().contains(soDT)) {
-                ketQua.add(kh);
-            }
-        }
-        return ketQua;
-    }
-
-    public List<KhachHang> timKiemTheoHang(String hang) {
-        List<KhachHang> ketQua = new ArrayList<>();
-        for (KhachHang kh : danhSach) {
-            if (kh.getHangKhachHang().equals(hang)) {
-                ketQua.add(kh);
-            }
-        }
-        return ketQua;
-    }
-
-    public List<KhachHang> timKiemTheoDiaChi(String diaChi) {
-        List<KhachHang> ketQua = new ArrayList<>();
-        for (KhachHang kh : danhSach) {
-            if (kh.getDiaChi().toLowerCase().contains(diaChi.toLowerCase())) {
-                ketQua.add(kh);
-            }
-        }
-        return ketQua;
-    }
-
-    // SỬA: Các phương thức không áp dụng trả về danh sách rỗng
     @Override
-    public List<KhachHang> timKiemTheoChuyenBay(String maChuyen) {
+    public List<KhachHang> timKiemTheoNgayBay(Date ngay) {
         // Không áp dụng cho khách hàng
         return new ArrayList<>();
     }
@@ -168,12 +121,102 @@ public class DanhSachKhachHang implements IQuanLy<KhachHang>, IFileHandler {
     }
 
     @Override
-    public List<KhachHang> timKiemTheoNgayBay(Date ngay) {
+    public List<KhachHang> timKiemTheoChuyenBay(String maChuyen) {
         // Không áp dụng cho khách hàng
         return new ArrayList<>();
     }
 
-    // TÌM KIẾM ĐA TIÊU CHÍ
+    @Override
+    public void hienThiTatCa() {
+        if (danhSach.isEmpty()) {
+            System.out.println("Danh sách khách hàng trống!");
+            return;
+        }
+
+        System.out.println("===== DANH SÁCH TẤT CẢ KHÁCH HÀNG =====");
+        for (int i = 0; i < danhSach.size(); i++) {
+            KhachHang kh = danhSach.get(i);
+            System.out.printf("%d. %s - %s - %s - %s - Điểm: %d - Hạng: %s%n",
+                    i + 1, kh.getMa(), kh.getHoTen(), kh.getCmnd(),
+                    kh.getSoDT(), kh.getDiemTichLuy(), kh.getHangKhachHang());
+        }
+    }
+
+    @Override
+    public void hienThiTheoTrangThai(String trangThai) {
+        // Không áp dụng trạng thái cho khách hàng
+        System.out.println("Khách hàng không có trạng thái, hiển thị tất cả:");
+        hienThiTatCa();
+    }
+
+    @Override
+    public int demSoLuong() {
+        return danhSach.size();
+    }
+
+    @Override
+    public boolean tonTai(String ma) {
+        return danhSach.stream().anyMatch(kh -> kh.getMa().equals(ma));
+    }
+
+    @Override
+    public void sapXepTheoMa() {
+        danhSach.sort(Comparator.comparing(KhachHang::getMa));
+    }
+
+    @Override
+    public void sapXepTheoGia() {
+        // Không áp dụng cho khách hàng
+        System.out.println("Không áp dụng sắp xếp theo giá cho khách hàng");
+    }
+
+    @Override
+    public void sapXepTheoNgayBay() {
+        // Không áp dụng cho khách hàng
+        System.out.println("Không áp dụng sắp xếp theo ngày bay cho khách hàng");
+    }
+
+    // ========== PHƯƠNG THỨC TÌM KIẾM NÂNG CAO ==========
+    public List<KhachHang> timKiemTheoEmail(String email) {
+        String keyword = email.toLowerCase();
+        return danhSach.stream()
+                .filter(kh -> kh.getEmail().toLowerCase().contains(keyword))
+                .collect(Collectors.toList());
+    }
+
+    public List<KhachHang> timKiemTheoSoDT(String soDT) {
+        return danhSach.stream()
+                .filter(kh -> kh.getSoDT().contains(soDT))
+                .collect(Collectors.toList());
+    }
+
+    public List<KhachHang> timKiemTheoHang(String hang) {
+        return danhSach.stream()
+                .filter(kh -> kh.getHangKhachHang().equals(hang))
+                .collect(Collectors.toList());
+    }
+
+    public List<KhachHang> timKiemTheoDiaChi(String diaChi) {
+        String keyword = diaChi.toLowerCase();
+        return danhSach.stream()
+                .filter(kh -> kh.getDiaChi().toLowerCase().contains(keyword))
+                .collect(Collectors.toList());
+    }
+
+    public List<KhachHang> timKiemGanDung(String keyword) {
+        String keywordLower = keyword.toLowerCase();
+        
+        return danhSach.stream()
+                .filter(kh -> kh.getMa().toLowerCase().contains(keywordLower) ||
+                             kh.getHoTen().toLowerCase().contains(keywordLower) ||
+                             kh.getCmnd().contains(keyword) ||
+                             kh.getEmail().toLowerCase().contains(keywordLower) ||
+                             kh.getSoDT().contains(keyword) ||
+                             kh.getDiaChi().toLowerCase().contains(keywordLower) ||
+                             kh.getHangKhachHang().toLowerCase().contains(keywordLower))
+                .collect(Collectors.toList());
+    }
+
     public List<KhachHang> timKiemKhachHang(Map<String, Object> filters) {
         List<KhachHang> ketQua = new ArrayList<>(danhSach);
 
@@ -225,122 +268,47 @@ public class DanhSachKhachHang implements IQuanLy<KhachHang>, IFileHandler {
         return ketQua;
     }
 
-    @Override
-    public void hienThiTatCa() {
-        if (danhSach.isEmpty()) {
-            System.out.println("Danh sách khách hàng trống!");
-            return;
+    // ========== PHÂN TRANG ==========
+    public List<KhachHang> phanTrang(int trang, int kichThuocTrang) {
+        int batDau = (trang - 1) * kichThuocTrang;
+        int ketThuc = Math.min(batDau + kichThuocTrang, danhSach.size());
+        
+        if (batDau >= danhSach.size() || batDau < 0) {
+            return new ArrayList<>();
         }
-
-        System.out.println("===== DANH SÁCH TẤT CẢ KHÁCH HÀNG =====");
-        for (int i = 0; i < danhSach.size(); i++) {
-            KhachHang kh = danhSach.get(i);
-            System.out.printf("%d. %s - %s - %s - %s - Điểm: %d - Hạng: %s%n",
-                    i + 1, kh.getMaKH(), kh.getHoTen(), kh.getCmnd(),
-                    kh.getSoDT(), kh.getDiemTichLuy(), kh.getHangKhachHang());
-        }
+        
+        return new ArrayList<>(danhSach.subList(batDau, ketThuc));
     }
 
-    @Override
-    public void hienThiTheoTrangThai(String trangThai) {
-        // Không áp dụng trạng thái cho khách hàng
-        System.out.println("Khách hàng không có trạng thái, hiển thị tất cả:");
-        hienThiTatCa();
+    public int getTongSoTrang(int kichThuocTrang) {
+        return (int) Math.ceil((double) danhSach.size() / kichThuocTrang);
     }
 
-    @Override
-    public int demSoLuong() {
-        return danhSach.size();
-    }
-
-    @Override
-    public boolean tonTai(String ma) {
-        return danhSach.stream().anyMatch(kh -> kh.getMaKH().equals(ma));
-    }
-
-    private boolean tonTaiCMND(String cmnd, String maLoaiTru) {
-        for (KhachHang kh : danhSach) {
-            if ((maLoaiTru == null || !kh.getMaKH().equals(maLoaiTru)) && kh.getCmnd().equals(cmnd)) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    @Override
-    public void sapXepTheoMa() {
-        danhSach.sort(Comparator.comparing(KhachHang::getMaKH));
-    }
-
+    // ========== SẮP XẾP NÂNG CAO ==========
     public void sapXepTheoHoTen() {
         danhSach.sort(Comparator.comparing(KhachHang::getHoTen));
     }
 
     public void sapXepTheoDiem() {
-        danhSach.sort((kh1, kh2) -> Integer.compare(kh2.getDiemTichLuy(), kh1.getDiemTichLuy())); // Giảm dần
+        danhSach.sort((kh1, kh2) -> Integer.compare(kh2.getDiemTichLuy(), kh1.getDiemTichLuy()));
     }
 
     public void sapXepTheoNgayDangKy() {
         danhSach.sort(Comparator.comparing(KhachHang::getNgayDangKy));
     }
 
-    // SỬA: Các phương thức không áp dụng
-    @Override
-    public void sapXepTheoGia() {
-        // Không áp dụng
-        System.out.println("Không áp dụng sắp xếp theo giá cho khách hàng");
-    }
-
-    @Override
-    public void sapXepTheoNgayBay() {
-        // Không áp dụng
-        System.out.println("Không áp dụng sắp xếp theo ngày bay cho khách hàng");
-    }
-
-    // SỬA: Thêm phương thức phân trang
-    public List<KhachHang> phanTrang(int trang, int kichThuocTrang) {
-        int batDau = (trang - 1) * kichThuocTrang;
-        int ketThuc = Math.min(batDau + kichThuocTrang, danhSach.size());
-        
-        if (batDau >= danhSach.size()) {
-            return new ArrayList<>();
-        }
-        
-        return danhSach.subList(batDau, ketThuc);
-    }
-
-    // SỬA: Thêm phương thức tìm kiếm gần đúng
-    public List<KhachHang> timKiemGanDung(String keyword) {
-        List<KhachHang> ketQua = new ArrayList<>();
-        String keywordLower = keyword.toLowerCase();
-        
-        for (KhachHang kh : danhSach) {
-            if (kh.getMaKH().toLowerCase().contains(keywordLower) ||
-                kh.getHoTen().toLowerCase().contains(keywordLower) ||
-                kh.getCmnd().contains(keyword) ||
-                kh.getEmail().toLowerCase().contains(keywordLower) ||
-                kh.getSoDT().contains(keyword) ||
-                kh.getDiaChi().toLowerCase().contains(keywordLower) ||
-                kh.getHangKhachHang().toLowerCase().contains(keywordLower)) {
-                ketQua.add(kh);
-            }
-        }
-        return ketQua;
+    public void sapXepTheoNgaySinh() {
+        danhSach.sort(Comparator.comparing(KhachHang::getNgaySinh));
     }
 
     // ========== IMPLEMENT IFILEHANDLER ==========
     @Override
     public boolean docFile(String tenFile) {
-        return docFileXML1(tenFile);
-    }
-
-    // SỬA: Phương thức đọc file XML
-    private boolean docFileXML1(String tenFile) {
         try {
-            
             List<Map<String, String>> dataList = XMLUtils.docFileXML(tenFile);
+
             if (dataList == null || dataList.isEmpty()) {
-                System.out.println("❌ Không có dữ liệu trong file XML");
+                System.out.println("Không có dữ liệu trong file XML");
                 return false;
             }
 
@@ -349,7 +317,7 @@ public class DanhSachKhachHang implements IQuanLy<KhachHang>, IFileHandler {
                 try {
                     // Kiểm tra dữ liệu bắt buộc
                     if (data.get("MaKH") == null || data.get("MaKH").isEmpty()) {
-                        System.out.println("⚠️ Bỏ qua dòng thiếu mã khách hàng");
+                        System.out.println("Bỏ qua dòng thiếu mã khách hàng");
                         continue;
                     }
 
@@ -362,10 +330,12 @@ public class DanhSachKhachHang implements IQuanLy<KhachHang>, IFileHandler {
                             data.get("CMND"),
                             XMLUtils.stringToDate(data.get("NgaySinh")),
                             data.get("GioiTinh"),
-                            data.get("DiaChi")
+                            data.get("DiaChi"),
+                            data.get("TenDangNhap"),
+                            data.get("MatKhau")
                     );
 
-                    // Cập nhật các thuộc tính bổ sung nếu có
+                    // Cập nhật các thuộc tính bổ sung
                     if (data.containsKey("HangKhachHang") && data.get("HangKhachHang") != null) {
                         kh.setHangKhachHang(data.get("HangKhachHang"));
                     }
@@ -379,48 +349,42 @@ public class DanhSachKhachHang implements IQuanLy<KhachHang>, IFileHandler {
                     }
 
                     // Thêm vào danh sách (kiểm tra trùng trước khi thêm)
-                    if (!tonTai(kh.getMaKH())) {
+                    if (!tonTai(kh.getMa())) {
                         danhSach.add(kh);
                         count++;
-                    } else {
-                        System.out.println("⚠️ Bỏ qua khách hàng trùng mã: " + kh.getMaKH());
                     }
 
                 } catch (Exception e) {
-                    System.out.println("❌ Lỗi tạo KhachHang từ XML: " + e.getMessage());
-                    e.printStackTrace();
+                    System.err.println("Lỗi tạo KhachHang từ XML: " + e.getMessage());
                 }
             }
 
+            System.out.println("Đã tải " + count + " khách hàng từ file XML");
             return count > 0;
 
         } catch (Exception e) {
-            System.out.println("💥 Lỗi đọc file XML: " + e.getMessage());
-            e.printStackTrace();
+            System.err.println("Lỗi đọc file XML: " + e.getMessage());
             return false;
         }
     }
 
     @Override
     public boolean ghiFile(String tenFile) {
-        return ghiFileXML(tenFile);
-    }
-
-    // SỬA: Phương thức ghi file XML
-    private boolean ghiFileXML(String tenFile) {
         try {
             List<Map<String, String>> dataList = new ArrayList<>();
 
             for (KhachHang kh : danhSach) {
                 Map<String, String> data = new HashMap<>();
-                data.put("MaKH", kh.getMaKH());
+                data.put("MaKH", kh.getMa());
                 data.put("HoTen", kh.getHoTen());
                 data.put("SoDT", kh.getSoDT());
                 data.put("Email", kh.getEmail());
                 data.put("CMND", kh.getCmnd());
-                data.put("NgaySinh", XMLUtils.dateToDateOnlyString(kh.getNgaySinh()));
+                data.put("NgaySinh", XMLUtils.dateToString(kh.getNgaySinh()));
                 data.put("GioiTinh", kh.getGioiTinh());
                 data.put("DiaChi", kh.getDiaChi());
+                data.put("TenDangNhap", kh.getTenDangNhap());
+                data.put("MatKhau", kh.getMatKhau());
                 data.put("HangKhachHang", kh.getHangKhachHang());
                 data.put("DiemTichLuy", String.valueOf(kh.getDiemTichLuy()));
                 data.put("NgayDangKy", XMLUtils.dateToString(kh.getNgayDangKy()));
@@ -428,115 +392,139 @@ public class DanhSachKhachHang implements IQuanLy<KhachHang>, IFileHandler {
                 dataList.add(data);
             }
 
-            return ghiFileXML(tenFile, dataList, "KhachHangs");
+            return XMLUtils.ghiFileXML(tenFile, dataList, "KhachHangs");
 
         } catch (Exception e) {
-            System.out.println("❌ Lỗi ghi file XML: " + e.getMessage());
-            e.printStackTrace();
+            System.err.println("Lỗi ghi file XML: " + e.getMessage());
             return false;
         }
     }
 
     // ========== PHƯƠNG THỨC NGHIỆP VỤ ==========
+    private boolean tonTaiCMND(String cmnd, String maLoaiTru) {
+        return danhSach.stream()
+                .anyMatch(kh -> (maLoaiTru == null || !kh.getMa().equals(maLoaiTru)) && 
+                               kh.getCmnd().equals(cmnd));
+    }
+
+    private boolean tonTaiEmail(String email, String maLoaiTru) {
+        return danhSach.stream()
+                .anyMatch(kh -> (maLoaiTru == null || !kh.getMa().equals(maLoaiTru)) && 
+                               kh.getEmail().equalsIgnoreCase(email));
+    }
+
+    private boolean coVeDangHoatDong(KhachHang khachHang) {
+        // Giả sử có phương thức kiểm tra vé đang hoạt động
+        // Trong thực tế, cần tích hợp với service quản lý vé
+        return false; // Tạm thời trả về false
+    }
+
     public void tangDiemKhachHang(String maKH, int diem) {
         KhachHang kh = timKiemTheoMa(maKH);
         if (kh != null) {
             kh.tangDiemTichLuy(diem);
-            System.out.printf("✅ Đã thêm %d điểm cho KH %s. Tổng điểm: %d%n",
-                    diem, kh.getHoTen(), kh.getDiemTichLuy());
         } else {
-            System.out.println("❌ Không tìm thấy khách hàng với mã: " + maKH);
+            throw new IllegalArgumentException("Không tìm thấy khách hàng với mã: " + maKH);
         }
     }
 
-    public void giamDiemKhachHang(String maKH, int diem) {
+    public boolean suDungDiemKhachHang(String maKH, int diem) {
         KhachHang kh = timKiemTheoMa(maKH);
-        if (kh != null) {
-            try {
-                kh.giamDiemTichLuy(diem);
-                System.out.printf("✅ Đã giảm %d điểm của KH %s. Tổng điểm: %d%n",
-                        diem, kh.getHoTen(), kh.getDiemTichLuy());
-            } catch (IllegalArgumentException e) {
-                System.out.println("❌ Lỗi: " + e.getMessage());
-            }
-        } else {
-            System.out.println("❌ Không tìm thấy khách hàng với mã: " + maKH);
-        }
+        return kh != null && kh.suDungDiemTichLuy(diem);
     }
 
     public void capNhatHangKhachHang() {
-        int count = 0;
         for (KhachHang kh : danhSach) {
             String hangCu = kh.getHangKhachHang();
             kh.tangDiemTichLuy(0); // Chỉ để cập nhật hạng
             if (!hangCu.equals(kh.getHangKhachHang())) {
-                count++;
-                System.out.printf("🔄 %s: %s → %s%n", kh.getMaKH(), hangCu, kh.getHangKhachHang());
+                System.out.printf("Cập nhật hạng: %s: %s → %s%n", 
+                    kh.getMa(), hangCu, kh.getHangKhachHang());
             }
         }
-        System.out.println("✅ Đã cập nhật hạng cho " + count + " khách hàng");
     }
 
+    // ========== THỐNG KÊ ==========
     public Map<String, Integer> thongKeTheoHang() {
-        Map<String, Integer> thongKe = new HashMap<>();
-        for (KhachHang kh : danhSach) {
-            String hang = kh.getHangKhachHang();
-            thongKe.put(hang, thongKe.getOrDefault(hang, 0) + 1);
-        }
-        return thongKe;
+        return danhSach.stream()
+                .collect(Collectors.groupingBy(
+                    KhachHang::getHangKhachHang,
+                    Collectors.summingInt(kh -> 1)
+                ));
     }
 
     public Map<String, Integer> thongKeTheoGioiTinh() {
-        Map<String, Integer> thongKe = new HashMap<>();
-        for (KhachHang kh : danhSach) {
-            String gioiTinh = kh.getGioiTinh();
-            thongKe.put(gioiTinh, thongKe.getOrDefault(gioiTinh, 0) + 1);
-        }
-        return thongKe;
+        return danhSach.stream()
+                .collect(Collectors.groupingBy(
+                    KhachHang::getGioiTinh,
+                    Collectors.summingInt(kh -> 1)
+                ));
     }
 
     public Map<String, Integer> thongKeTheoTuoi() {
-        Map<String, Integer> thongKe = new HashMap<>();
-        for (KhachHang kh : danhSach) {
-            int tuoi = kh.tinhTuoi();
-            String nhomTuoi;
-            if (tuoi < 18) nhomTuoi = "Dưới 18";
-            else if (tuoi < 25) nhomTuoi = "18-24";
-            else if (tuoi < 35) nhomTuoi = "25-34";
-            else if (tuoi < 45) nhomTuoi = "35-44";
-            else if (tuoi < 60) nhomTuoi = "45-59";
-            else nhomTuoi = "Trên 60";
-            
-            thongKe.put(nhomTuoi, thongKe.getOrDefault(nhomTuoi, 0) + 1);
-        }
-        return thongKe;
+        return danhSach.stream()
+                .collect(Collectors.groupingBy(
+                    kh -> {
+                        int tuoi = kh.tinhTuoi();
+                        if (tuoi < 18) return "Dưới 18";
+                        else if (tuoi < 25) return "18-24";
+                        else if (tuoi < 35) return "25-34";
+                        else if (tuoi < 45) return "35-44";
+                        else if (tuoi < 60) return "45-59";
+                        else return "Trên 60";
+                    },
+                    Collectors.summingInt(kh -> 1)
+                ));
+    }
+
+    public Map<String, Integer> thongKeTheoThanhPho() {
+        return danhSach.stream()
+                .collect(Collectors.groupingBy(
+                    kh -> {
+                        String diaChi = kh.getDiaChi().toLowerCase();
+                        if (diaChi.contains("hà nội")) return "Hà Nội";
+                        else if (diaChi.contains("tp.hcm") || diaChi.contains("hồ chí minh")) return "TP.HCM";
+                        else if (diaChi.contains("đà nẵng")) return "Đà Nẵng";
+                        else if (diaChi.contains("cần thơ")) return "Cần Thơ";
+                        else if (diaChi.contains("hải phòng")) return "Hải Phòng";
+                        else return "Tỉnh khác";
+                    },
+                    Collectors.summingInt(kh -> 1)
+                ));
     }
 
     public List<KhachHang> getKhachHangVip() {
-        List<KhachHang> vipList = new ArrayList<>();
-        for (KhachHang kh : danhSach) {
-            if (kh.getHangKhachHang().equals(KhachHang.HANG_GOLD)
-                    || kh.getHangKhachHang().equals(KhachHang.HANG_PLATINUM)) {
-                vipList.add(kh);
-            }
-        }
-        return vipList;
+        return danhSach.stream()
+                .filter(kh -> kh.isHangGold() || kh.isHangPlatinum())
+                .collect(Collectors.toList());
     }
 
     public List<KhachHang> getKhachHangCoDiemCao(int soDiemToiThieu) {
         return danhSach.stream()
                 .filter(kh -> kh.getDiemTichLuy() >= soDiemToiThieu)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public List<KhachHang> getDanhSach() {
-        return new ArrayList<>(danhSach);
+    public KhachHang getKhachHangCoDiemCaoNhat() {
+        return danhSach.stream()
+                .max(Comparator.comparingInt(KhachHang::getDiemTichLuy))
+                .orElse(null);
     }
 
-    // Phương thức tiện ích
+    public double getTyLeKhachHangVip() {
+        long soKhachHangVip = danhSach.stream()
+                .filter(kh -> kh.isHangGold() || kh.isHangPlatinum())
+                .count();
+        return danhSach.isEmpty() ? 0 : (double) soKhachHangVip / danhSach.size() * 100;
+    }
+
+    // ========== UTILITY METHODS ==========
     public void xoaTatCa() {
         danhSach.clear();
-        System.out.println("✅ Đã xóa tất cả khách hàng!");
+    }
+
+    public boolean isEmpty() {
+        return danhSach.isEmpty();
     }
 
     public void hienThiThongKe() {
@@ -544,29 +532,34 @@ public class DanhSachKhachHang implements IQuanLy<KhachHang>, IFileHandler {
         System.out.println("Tổng số khách hàng: " + demSoLuong());
 
         Map<String, Integer> thongKeHang = thongKeTheoHang();
-        System.out.println("📊 Phân bố hạng:");
-        for (Map.Entry<String, Integer> entry : thongKeHang.entrySet()) {
-            System.out.printf("   - %s: %d khách hàng%n", entry.getKey(), entry.getValue());
-        }
+        System.out.println("Phân bố hạng:");
+        thongKeHang.forEach((hang, soLuong) -> 
+            System.out.printf("   - %s: %d khách hàng%n", hang, soLuong));
 
         Map<String, Integer> thongKeGioiTinh = thongKeTheoGioiTinh();
-        System.out.println("👥 Phân bố giới tính:");
-        for (Map.Entry<String, Integer> entry : thongKeGioiTinh.entrySet()) {
-            System.out.printf("   - %s: %d khách hàng%n", entry.getKey(), entry.getValue());
-        }
+        System.out.println("Phân bố giới tính:");
+        thongKeGioiTinh.forEach((gioiTinh, soLuong) -> 
+            System.out.printf("   - %s: %d khách hàng%n", gioiTinh, soLuong));
 
-        Map<String, Integer> thongKeTuoi = thongKeTheoTuoi();
-        System.out.println("🎂 Phân bố tuổi:");
-        for (Map.Entry<String, Integer> entry : thongKeTuoi.entrySet()) {
-            System.out.printf("   - %s: %d khách hàng%n", entry.getKey(), entry.getValue());
+        System.out.printf("Tỷ lệ khách hàng VIP: %.1f%%%n", getTyLeKhachHangVip());
+        
+        KhachHang khachHangDiemCaoNhat = getKhachHangCoDiemCaoNhat();
+        if (khachHangDiemCaoNhat != null) {
+            System.out.printf("Khách hàng có điểm cao nhất: %s - %d điểm%n", 
+                khachHangDiemCaoNhat.getHoTen(), khachHangDiemCaoNhat.getDiemTichLuy());
         }
+    }
 
-        List<KhachHang> vipList = getKhachHangVip();
-        System.out.println("⭐ Khách hàng VIP: " + vipList.size());
-    }
-    public static void main(String[] args) {
-        DanhSachKhachHang ds = new DanhSachKhachHang();
-        ds.docFileXML1("src/resources/data/2_KhachHangs.xml");
-        ds.hienThiTatCa();
-    }
+    // // ========== MAIN METHOD FOR TESTING ==========
+    // public static void main(String[] args) {
+    //     DanhSachKhachHang ds = new DanhSachKhachHang();
+    //     ds.docFile("src/resources/data/2_KhachHangs.xml");
+    //     ds.hienThiTatCa();
+    //     ds.hienThiThongKe();
+        
+    //     // Test phân trang
+    //     System.out.println("\n=== TEST PHÂN TRANG ===");
+    //     List<KhachHang> trang1 = ds.phanTrang(1, 5);
+    //     trang1.forEach(kh -> System.out.println(kh.getMa() + " - " + kh.getHoTen()));
+    // }
 }
